testsuite/poke.pkl/struct-method-diag-1.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    defun foo = int: { return 10; }
    int i : i !=
      foo; /* { dg-error "method" } */
  };
